--- a/utcdate/src/main/resources/static/index.html
+++ b/utcdate/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
               <img class="mb-4" src="img/logo.svg" alt="" width="72" height="72">              
               <h1 class="h3 mb-3 font-weight-normal" onclick="hello()">Timestamp converter!</h1>
             </div>
-
+            <div id="timestampNOW"></div>
             <div class="form-label-group">
               <input class="form-control" type="number" value="0" id="timestampInput" min="1" pattern= "[0-9]">
               <label>Timestamp</label>
