--- a/utcdate/src/main/resources/static/index.html
+++ b/utcdate/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
             <div id="timestampNOW"></div>
             <div class="form-label-group">
               <input class="form-control" type="number" value="0" id="timestampInput" min="1" pattern= "[0-9]">
-              <label>Timestamp</label>
+              <!-- <label>Timestamp</label> -->
             </div>
 
             <button class="btn btn-lg btn-primary btn-block" onclick="timestampUTC()" title="Hit to get UTC format"> Get UTC format </button>
