--- a/utcdate/src/main/resources/static/index.html
+++ b/utcdate/src/main/resources/static/index.html
@@ -28,12 +28,12 @@
             </div>
             <div id="timestampNOW"></div>
             <div class="form-label-group">
-              <input class="form-control" type="number" value="0" id="timestampInput" min="1" pattern= "[0-9]">
-              <!-- <label>Timestamp</label> -->
+              <input class="form-control" type="number" value="" id="timestampInput" min="1" pattern= "[0-9]">
             </div>
 
             <button class="btn btn-lg btn-primary btn-block" onclick="timestampUTC()" title="Hit to get UTC format"> Get UTC format </button>
             <button class="btn btn-lg btn-primary btn-block" onclick="timestampISO()" title="Hit to get ISO format"> Get ISO format</button>
+              <br>
             <div id="response" align="center"></div>
 
             <p class="mt-5 mb-3 text-muted text-center"><a href="https://www.linkedin.com/in/ricardo-silva-dublin/"> Ricardo Silva &copy; 2019</a></p>
