--- a/utcdate/src/main/resources/static/index.html
+++ b/utcdate/src/main/resources/static/index.html
@@ -16,6 +16,9 @@
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.0/examples/floating-labels/floating-labels.css" rel="stylesheet">
 
+    <!-- custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
 
     <title>Timestamp conversor!</title>
   </head>
@@ -34,7 +37,7 @@
             <button class="btn btn-lg btn-primary btn-block" onclick="timestampUTC()" title="Hit to get UTC format"> Get UTC format </button>
             <button class="btn btn-lg btn-primary btn-block" onclick="timestampISO()" title="Hit to get ISO format"> Get ISO format</button>
               <br>
-            <div id="response" align="center"></div>
+            <div id="response"></div>
 <!-- 
             
             <select id="selectID" onchange="getTimeZoneFromSelect()">
@@ -129,7 +132,7 @@
           </div>
     <!-- JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
