--- a/utcdate/src/main/resources/static/index.html
+++ b/utcdate/src/main/resources/static/index.html
@@ -35,8 +35,7 @@
             </div>
 
             <button class="btn btn-lg btn-primary btn-block" onclick="timestampUTC()" title="Hit to get UTC format"> Get UTC format </button>
-            <button class="btn btn-lg btn-primary btn-block" onclick="timestampISO()" title="Hit to get ISO format"> Get ISO format</button>
-              <br>
+            <button class="btn btn-lg btn-primary btn-block" onclick="timestampISO()" title="Hit to get ISO format"> Get ISO format</button>              <br>
             <div id="response"></div>
 <!-- 
             
